--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Kyungmyun An Personal Website
+title: Kyungmyun's Life
 email: kaiser1227@gmail.com
 description: Kyungmyun An Work & Life
 # > # this means to ignore newlines until "baseurl:"
