--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ newsourceroot: https://github.com/kaiser1227/kaiser1227.github.io/new/master
 #duoshuo_shortname: lixizhi
 #duoshuo_url: "http://lixizhi.github.io"
 # disqus.com commenting system. please note that it is exclusive with duoshuo.com
-disqus_shortname: kaiser1227
+disqus_shortname: https-kaiser1227-github-io
 disqus_url: "http://kaiser1227.github.io"
 #########################################
 
